some groovy updates

--- a/css/_global.css
+++ b/css/_global.css
@@ -1,18 +1,27 @@
-/* BASE */
 :root {
-  font-size: 16px;
+  --base-font-size: 16;
+  --px-to-rem: calc(1rem / var(--base-font-size) * 1);
+  --px-40: calc(40 * var(--px-to-rem));
+  --px-80: calc(80 * var(--px-to-rem));
+  --px-64: calc(64 * var(--px-to-rem));
+}
+
+html {
+  font-size: var(--base-font-size);
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  color: red;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 2rem;
   box-sizing: border-box;
+  background-color: #000000;
 }
 
 header {
@@ -45,38 +54,70 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: red;
   font-size: 1rem;
 }
 
-.image-grid {
+section {
+  padding: var(--px-80);
+  margin: var(--px-80) 0;
+  border-top: solid 10px red;
+}
+
+section:first-child {
+  margin-top: 0;
+}
+
+section h1 {
+  width: 100%;
+  text-align: center;
+  font-size: var(--px-64);
+  color: white;
+}
+
+.grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
 }
 
-.image-grid img {
+.grid__cell {
+  display: block;
   width: calc(33.333% - 1rem);
-  height: auto;
+  height: calc(33.333% - 1rem);
   border-radius: 0.5rem;
+  background-color: #000000;
 }
 
-/* Responsive adjustments */
-@media (max-width: 768px) {
-  .image-grid img {
-    width: calc(50% - 1rem);
-  }
+.grid__thumb img {
+  width: 100%;
 }
 
-@media (max-width: 480px) {
-  .image-grid img {
-    width: 100%;
-  }
+.grid__metadata {
+  color: #ffffff;
 }
 
 .lookatme {
   transition: transform 0.1s ease-out;
   transform-style: preserve-3d;
   perspective: 1000px;
+}
+
+.bg-dark {
+  background-color: rgb(49, 9, 9);
+  color: rgb(179, 179, 179);
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .grid__cell {
+    width: calc(50% - 1rem);
+  }
+}
+
+@media (max-width: 480px) {
+  .grid__cell {
+    width: 100%;
+  }
 }
